# wellsantos-tools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
app/: contrib
tests/contrib/general/: error.py  misc.py  misc_test.py  module.py  module_test.py  settings_test.py
wellsantos/dependency/: close.py  factory.py  local.py  subclass.py
wellsantos/general/: clock.py  enum.py  error.py  misc.py  model.py  settings.py  tracing.py
